--- a/src/app/components/product-card/product-card.component.css
+++ b/src/app/components/product-card/product-card.component.css
@@ -1,7 +1,13 @@
 .example-card {
     max-width: 400px;
     color: #fff;
+  margin: 1rem 10px 0 0;
   }
+img{
+  width: 100%;
+  max-width: 800px;
+}
+
 
  /* .example-header-image {
     background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
