--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -1,20 +1,17 @@
-<mat-card class="example-card" appearance="outlined">
+<mat-card class="example-card mat-elevation-z20 " appearance="outlined">
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
     <mat-card-title>{{ product().name | titlecase }}</mat-card-title>
     <mat-card-subtitle>{{ product().brand | uppercase }}</mat-card-subtitle>
   </mat-card-header>
-  <img alt=""  mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of product">
+  <img  alt=".."   mat-card-image
+         src="http://localhost:8080/api/v1/images/image/download/{{product().images[0].id}}">
   <mat-card-content>
     <p>
-       {{ product().description }}
+       {{ product().category.name | titlecase }}
     </p>
   </mat-card-content>
-  <mat-card-actions>
+  <mat-card-actions class="is-centered mb-2">
     <button mat-raised-button (click)="navigateToDetails(product())">voir détails</button>
-    <button mat-button>
-
-      Supprimer
-    </button>
   </mat-card-actions>
 </mat-card>
