--- a/src/app/product/components/product-details/product-details.component.html
+++ b/src/app/product/components/product-details/product-details.component.html
@@ -1,5 +1,16 @@
-{{ product()?.name }}
-{{ product()?.category?.name }}
-{{ product()?.price }}
-{{ product()?.inventory }}
-{{ product()?.brand }}
+<div class=" main">
+  <img
+  src="http://localhost:8080/api/v1/images/image/download/{{ product()!.images[0].id }}" alt="">
+<div class="container">
+
+  <h1>{{ product()?.brand }} {{ product()?.name }}</h1>
+<h1>
+  {{ product()?.category?.name }}</h1>
+
+<h1>{{ product()?.price | currency:'XOF':'code' }}</h1>
+<h1>{{ product()?.inventory }}</h1>
+<h1></h1>
+
+</div>
+
+</div>
