--- a/src/app/product/components/product-list/product-list.component.html
+++ b/src/app/product/components/product-list/product-list.component.html
@@ -1,8 +1,11 @@
-<div class="main-content">
+<div class="main-content"
+  [style]="
+    ( products()!.length % 2 === 0 ||  products()!.length % 3 === 0 ||  products()!.length % 5 != 0)
+    ? centerStyle:alignStart">
   @for (product of products(); track $index) {
-    <app-product-card [product]="product" ></app-product-card>
-  }@empty {
-    <h1>No items here</h1>
+    <app-product-card [product]="product"></app-product-card>
   }
 
 </div>
+
+
