--- a/src/app/core/components/navbar/navbar.component.css
+++ b/src/app/core/components/navbar/navbar.component.css
@@ -1,3 +1,29 @@
 .example-spacer {
   flex: 1 1 auto;
 }
+.button-row{
+  display: flex;
+  gap: 10px;
+}
+
+mat-toolbar {
+  justify-content: space-between;
+  background-color: var(--mat-sys-primary);
+  color: var(--mat-sys-on-primary);
+}
+
+mat-toolbar button.mat-icon-button {
+  color: var(--mat-sys-on-primary);
+}
+
+.theme-menu-item {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.color-preview {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+}
