Grid added to new product components

--- a/src/app/product/components/new-product/new-product.component.html
+++ b/src/app/product/components/new-product/new-product.component.html
@@ -1,2 +1,6 @@
-<app-stepper></app-stepper>
-<h1>fu</h1>
+
+
+<mat-grid-list cols="2" rowHeight="1:1">
+  <mat-grid-tile class="tile"></mat-grid-tile>
+  <mat-grid-tile><app-stepper></app-stepper></mat-grid-tile>
+</mat-grid-list>
