Implement register & login form with reactive forms

--- a/src/app/product/components/new-product/new-product.component.css
+++ b/src/app/product/components/new-product/new-product.component.css
@@ -1,5 +1,5 @@
 .tile {
-  background-image: url('../public/pexels-bg-1.jpg');
+  /*background-image: url('../public/pexels-bg-1.jpg');*/
   background-repeat:no-repeat ;
   background-size: cover;
   width: 100%;
