--- a/src/app/product/components/new-product/new-product.component.css
+++ b/src/app/product/components/new-product/new-product.component.css
@@ -1,8 +1,13 @@
-.tile {
-  /*background-image: url('../public/pexels-bg-1.jpg');*/
-  background-repeat:no-repeat ;
-  background-size: cover;
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
   width: 100%;
-  height: 100%;
-  /*center center fixed;*/
+
+}
+
+.example-full-width {
+  width: 100%;
+}
+mat-card{
+  min-width: 600px;
 }
