Navbar update mat-icon

--- a/src/app/core/components/navbar/navbar.component.css
+++ b/src/app/core/components/navbar/navbar.component.css
@@ -27,3 +27,6 @@ mat-toolbar button.mat-icon-button {
   height: 24px;
   border-radius: 50%;
 }
+mat-icon{
+  color: var(--mat-sys-primary-container);
+}
