--- a/src/app/product/components/product-card/product-card.component.html
+++ b/src/app/product/components/product-card/product-card.component.html
@@ -3,7 +3,7 @@
   <img  alt=".."   mat-card-image class="product().images[0] ? mt-2:''"     [src]="
     product().images[0]?image+product().images[0].id : imageDefault
   ">
-  <mat-card-content>
+  <mat-card-content class="mb-2">
     <mat-card-title>{{ product()!.name | titlecase }}</mat-card-title>
     <mat-card-subtitle  >{{ product()!.price| currency:'XOF' }}</mat-card-subtitle>
   </mat-card-content>
