--- a/src/app/product/components/product-list/product-list.component.html
+++ b/src/app/product/components/product-list/product-list.component.html
@@ -8,6 +8,9 @@
    }
 
  </div>
+}@else {
+  <div class="main-content"
+  style="display: flex; justify-content: center; align-items: center;">
+    <h1>Aucun produits n'est encore ajoutés</h1>
+  </div>
 }
-
-
