--- a/src/app/core/components/snack-bar/snack-bar.component.css
+++ b/src/app/core/components/snack-bar/snack-bar.component.css
@@ -3,4 +3,5 @@ mat-snackbar {
   container-color: var(--mat-sys-secondary);
   supporting-text-color: var(--mat-sys-primary);
   button-color: var(--mat-sys-primary);
+  text-align: center;
 }
