--- a/src/app/core/components/snack-bar/snack-bar.component.html
+++ b/src/app/core/components/snack-bar/snack-bar.component.html
@@ -2,6 +2,6 @@
   {{message}}
 </span>
 <span matSnackBarActions>
-  <button mat-raised-button matSnackBarAction (click)="snackBarRef.dismissWithAction()">Fermer</button>
+  <button mat-button matSnackBarAction (click)="snackBarRef.dismissWithAction()">Fermer</button>
 </span>
 
