--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -11,8 +11,8 @@
   }
 
   <span class="example-spacer"></span>
-   
-  <button mat-icon-button [matMenuTriggerFor]="themeMenu">
+
+  <button mat-icon-button class="switcher"  [matMenuTriggerFor]="themeMenu" class="ml-2">
     <mat-icon>format_color_fill</mat-icon>
   </button>
   <mat-menu #themeMenu>
@@ -29,4 +29,18 @@
         }
 
   </mat-menu>
+  @if (isAuthenticated()){
+    <a  mat-raised-button
+      (click)="logout()" class="ml-2">
+      <mat-icon>power_settings_new</mat-icon>
+      Déconnexion
+    </a>
+  } @else {
+    @for (item of  navigationButtons;track item.name){
+      <a mat-raised-button routerLink="{{item.route}}" class="ml-2">
+        <mat-icon>{{item.icon}}</mat-icon>
+        {{item.name | titlecase}}
+      </a>
+    }
+  }
 </mat-toolbar>
