--- a/src/app/security/components/authentication/authentication.component.css
+++ b/src/app/security/components/authentication/authentication.component.css
@@ -8,11 +8,12 @@
 
 mat-card{
   max-width: 650px;
+  background-color: var(--mat-sys-penumbra-color);
 }
 
 .example-container mat-form-field + mat-form-field {
   margin-left: 8px;
 }
 .example-container mat-form-field {
-  width: 220px;
+  width: 320px;
 }
