--- a/src/app/product/components/new-product/new-product.component.html
+++ b/src/app/product/components/new-product/new-product.component.html
@@ -10,7 +10,8 @@
         </ng-template>
         <mat-form-field class="ml-3 ">
           <mat-label>Nom</mat-label>
-          <input matInput placeholder=" Nom du produit" formControlName="name" required>
+          <input matInput placeholder=" Nom du produit" formControlName="name"
+                 required>
         </mat-form-field>
         <mat-form-field class="ml-3">
           <mat-label>Inventaire</mat-label>
