--- a/src/app/product/components/product-details/product-details.component.html
+++ b/src/app/product/components/product-details/product-details.component.html
@@ -1,6 +1,5 @@
 <div class=" main">
-  <img
-  src="http://localhost:8080/api/v1/images/image/download/{{ product()!.images[0].id }}" alt="">
+  <img [src]="oneImageProduct()?image+oneImageProduct()?.id : imageDefault" alt="">
 <div class="container">
 
   <h1>{{ product()?.brand }} {{ product()?.name }}</h1>
