--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import './app/themes/themes.css';
+@import 'app/core/themes/themes.css';
 html, body { height: 100%; }
 body {
   margin: 0;
